<?xml version="1.0"?>
<package format="2">
  <name>dsl_msgs</name>
  <version>0.0.1</version>
  <description>Standard DSL messages including common types for various core DSL functionality.  Pretty much every DSL and vehicle-specific package will ultimately depend on this.  To keep the dependency tree cycle-free, this must have very few dependencies.  Think long and hard before adding any.</description>

  <maintainer email="ivaughn@whoi.edu">Ian Vaughn</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://bitbucket.org/whoidsl/dsl_msgs</url> -->

  <author email="ssuman@whoi.edu">Stefano Suman</author>
  <author email="zberkowitz@whoi.edu">Zac Berkowitzh</author>
  <author email="jvaccaro@whoi.edu">Jennifer Vaccaro</author>
  <author email="jhowland@whoi.edu">Jon Howland</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
  </export>
</package>
